--- a/Blog/Views/Account/Login.cshtml
+++ b/Blog/Views/Account/Login.cshtml
@@ -8,7 +8,8 @@
 <div class="row">
     <div class="col-md-8">
         <section id="loginForm">
-            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
+            @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+            {
                 @Html.AntiForgeryToken()
                 <h4>Use a local account to log in.</h4>
                 <hr />
@@ -40,6 +41,11 @@
                         <input type="submit" value="Log in" class="btn btn-default" />
                     </div>
                 </div>
+                <p style="color: green">
+                    Test account
+                    Login: smith@mail.com
+                    Password: !Q2w3e4r5t
+                </p>
                 <p>
                     @Html.ActionLink("Register a new user?", "Register")
                 </p>
