--- a/Blog/Views/NgPartials/PostAdd.cshtml
+++ b/Blog/Views/NgPartials/PostAdd.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "PostAdd";
 }
 
-<h2>PostAdd</h2>
+<h2>{{title}}</h2>
 
 <form id="upload-form" novalidate="novalidate">
     <div class="form-horizontal">
@@ -48,7 +48,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input id="submit" type="button" ng-disabled="loading" ng-click="submit()" value="Create" class="btn btn-default" />
+                <input id="submit" type="button" ng-disabled="loading" ng-click="submit()" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
